Module 9/m09a01tictactoe-handout/grading/2024-11-04-13-01-58/compile.err
Test06.java:13: error: cannot find symbol
            System.out.println(SuperTicTacToe.hasWinner(grid) ? "Yes" : "No");
                                             ^
  symbol:   method hasWinner(String[][])
  location: class SuperTicTacToe
1 error
